frontend/test/should_fail/error_message_on_missing_separator_rhs.grg
rule r : (Node)
{
	x:Node --> x;
	
	modify {
		y:Node --> y;
		
		def var i:int = 42;
		eval {
			yield i = i + 1;
		}
		
		return(y);
	}
}